Add POST route to index.js

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "shopify_order_metafields",
   "version": "1.0.0",
   "description": "A microservice API that updates a Shopify order on creation.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"main": "index.js",
+	"type": "module",
+	  "scripts": {
+		"dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
