--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "shopify_order_metafields",
   "version": "1.0.0",
   "description": "A microservice API that updates a Shopify order on creation.",
-	"main": "index.js",
-	"type": "module",
-	  "scripts": {
-		"dev": "nodemon index.js"
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/madebymak/shopify_order_metafields#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "request": "^2.88.2"
   },
